@@ -1,2 +1,3 @@
 [B]Version 1.1.128[/B]
 - animeidhentai - main list, pagination, years
+- kissjav - main list, pagination, categories
